--- a/index.html
+++ b/index.html
@@ -28,7 +28,19 @@
       <div id="lessonCards">
         <a href="./pages/whatislaw.html">
           <div class="lessoncard">
-            <h3>cardtitle</h3>
+            <h3>Basics of Rules.</h3>
+            <p>0/30</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="lessoncard">
+            <h3>Constitution Of india.</h3>
+            <p>0/30</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="lessoncard">
+            <h3>Fundamental rights</h3>
             <p>0/30</p>
           </div>
         </a>
